# RepoDiscoverAI

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MASTER_PLAN.md  MONITORING.md  PHASE1_COMPLETE.md  PHASE1_QUICKSTART.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  PHASE5_COMPLETE.md  PHASE5_PLAN.md  PROGRESS_2026-03-05.md  PROGRESS_2026-03-07.md  PROGRESS_2026-03-08.md  README.md  REDESIGN_PLAN.md  ROADMAP.md  SECURITY.md  USER_RESEARCH.md  WEEK1_TASKS.md  docker-compose.prod.yml  docker-compose.v3.yml  docker-compose.yml  local-deploy.sh  pyproject.toml  requirements-v3.txt
.github/workflows/: ci.yml  daily-digest.yml
ai_driven_web_apps/: README.md
ai_driven_web_apps/AutoGPT/: README.md
ai_enhanced_productivity_tools/: README.md
ai_powered_mobile_apps/: README.md
app/: main.py
cli/: main.py
docs/: PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  V3_DEVELOPMENT_PLAN.md
frontend/: index.html
github_trending_tech/: README.md
monitoring/: alertmanager.yml  alerts.yml  loki-config.yml  prometheus.yml  promtail-config.yml
nginx/: nginx.conf
scripts/: awesome_aggregator.py  backup.sh  cron_jobs.example  daily_digest.py  data_quality.py  gfi_scraper.py  github_trending_scraper.py  migrate.py  migrate_data.py  perf_test.py  requirements.txt  roadmap_fetcher.py  scheduled_updates.py  seo_generator.py  ssl_setup.sh  trending_scraper.md
tests/: test_content_generator.py  test_integration.py  test_trend_monitor.py
vscode-extension/: README.md  package.json
(+54 files in other folders)
