[project]
name = "repodiscover"
version = "2.0.0"
description = "Discover awesome GitHub repositories"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RepoDiscoverAI Team"}
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "markdown>=3.5.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.7.0",
]
search = [
    "meilisearch>=0.31.0",
]
scraper = [
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.scripts]
repodiscover = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
